examples/datalog/14_aggregations/21_nested_groupby.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_nested_group
Knowledge graph 'test_nested_group' created.
Switched to knowledge graph: test_nested_group
> .kg use test_nested_group
Switched to knowledge graph: test_nested_group
> +sales[("North", "Widget", 100), ("North", "Widget", 150), ("North", "Gadget", 200), ("South", "Widget", 300), ("South", "Gadget", 250)].
Inserted 5 fact(s) into 'sales'.
> +region_product_sum(Region, Product, <SUM:Amount>) :- sales(Region, Product, Amount).
Script error: Parse error: Invalid term: '<SUM:Amount>'
